# TikTokLive

./: .gitattributes  .gitignore  .pre-commit-config.yaml  1.py  CONTRIBUTING.md  ERROR_.txt  LICENSE  README.md  manifest.json  pyproject.toml  requirements.txt  setup.py  test.py  test.txt
.github/: FUNDING.yml  documentation.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  installation_help.md
.github/workflows/: docs.yml  generate.yml  lint.yml  release.yml  test.yml
.sphinx/: README.md  TikTokLive.client.rst  command.text  conf.py  test.sh
.sphinx/_build/doctrees/: README.doctree  TikTokLive.client.doctree  TikTokLive.doctree  TikTokLive.proto.doctree  TikTokLive.types.doctree  environment.pickle  index.doctree  modules.doctree  proto.doctree
.sphinx/_build/html/: README.html  TikTokLive.client.html  TikTokLive.html  TikTokLive.proto.html  TikTokLive.types.html  index.html  (+6 more)
TikTokLive/: __init__.py  __version__.py  client.py  utilities.py  utils.py
TikTokLive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
TikTokLive/.doctrees/: TikTokLive.doctree  TikTokLive.types.doctree  environment.pickle  modules.doctree
TikTokLive/_sources/: TikTokLive.proto.rst.txt  index.rst.txt
TikTokLive/client/: __init__.py  base.py  client.py  config.py  errors.py  http.py  httpx.py  logger.py  proxy.py  websocket.py  wsclient.py
TikTokLive/events/: __init__.py  base.py  base_event.py  custom_events.py  proto_events.py
TikTokLive/proto/: __init__.py  _aliases.py  custom_extras.py  custom_proto.py  proto_utils.py  tiktok_proto.py  tiktok_schema.proto  tiktok_schema_pb2.py  utilities.py
TikTokLive/types/: errors.py  events.py  objects.py
TikTokLiveBuild/events/: __build__.py  events_template.jinja2  overrides.py  transcribe.py
TikTokLiveBuild/proto/: __build__.py
TikTokLiveLegacy/: utilities.py
TikTokLiveLegacy/client/: base.py  client.py  httpx.py  wsclient.py
TikTokLiveLegacy/proto/: utilities.py
TikTokLiveLegacy/types/: __init__.py  errors.py  events.py  objects.py
_build/html/: index.html
_docs/: conf.py  py-modindex.html  searchindex.js
_docs/_sources/: index.rst.txt
docs/: .buildinfo  CNAME  README.html  TikTokLive.client.html  TikTokLive.client.web.html  TikTokLive.client.web.routes.html  TikTokLive.client.ws.html  TikTokLive.events.html  TikTokLive.html  TikTokLive.proto.html  TikTokLive.types.html  genindex.html  index.html  modules.html  objects.inv  proto.html  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  TikTokLive.client.rst.txt  TikTokLive.client.web.routes.rst.txt  TikTokLive.client.web.rst.txt  TikTokLive.client.ws.rst.txt  TikTokLive.proto.rst.txt  TikTokLive.rst.txt  TikTokLive.types.rst.txt  index.rst.txt  proto.rst.txt
docs/_static/: jquery-3.6.0.js
docs/doctrees/: README.doctree  TikTokLive.client.doctree  TikTokLive.doctree  environment.pickle  index.doctree  modules.doctree
docs/html/: .buildinfo  README.html  TikTokLive.client.html  TikTokLive.html  genindex.html  modules.html  objects.inv  py-modindex.html  search.html
docs/source/: TikTokLive.rst  conf.py  index.rst
docs/src/: Makefile  TikTokLive.client.rst  TikTokLive.client.web.routes.rst  TikTokLive.client.ws.rst  TikTokLive.events.rst  TikTokLive.proto.rst  conf.py  index.rst  make.bat  manifest.json  modules.rst  requirements.txt
examples/: EXAMPLES.md  README.md  avatars.py  basic.py  check_live.py  commands.py  comments.py  debug.py  discord.py  download.py  download_with_quality_video.py  download_with_qulity_video.py  gifts.py  images.py  logged_in.py  message.py  proxying.py  pygame.py  pygamex.py  reconnect.py  recording.py  twitch.py  web_defaults.py
examples/DonationSounds/: DonationSounds.py
examples/SoundsAndCommands/: main.py
examples/TextCommandSystem/: TextCommandSystem.py
examples/web-ui/: index.html  service.py
scripts/: package.sh  publish.py  requirements.txt
scripts/docs/: TikTokLive.client.web.routes.rst  TikTokLive.client.web.rst  TikTokLive.proto.rst  TikTokLive.rst  build.sh  conf.py  manifest.json  requirements.txt
scripts/events/: __build__.py  events.yaml  events_template.jinja2  overrides.py  transcribe.py
scripts/proto/: __build__.py  convert.py  gen_aliases.py  gen_events.py  preprocess.py
scripts/typescript/: README.md  compiler.py  publish.py  ts_template.jinja2
sphinx/: TikTokLive.client.rst
tests/: test_client.py  test_web_base.py  test_web_utils.py
(+97 files in other folders)
