[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TikTokLive"
version = "6.5.2"
description = "TikTok Live Python Client"
readme = "README.md"  # Corrected format
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Isaac Kogan", email = "info@isaackogan.com" }
]
keywords = ["tiktok", "tiktok live", "python3", "api", "unofficial"]
dependencies = [
    "httpx>=0.26.0",
    "pyee>=9.0.4",
    "ffmpy>=0.3.0",
    "websockets_proxy==0.1.3",
    "betterproto==2.0.0b7",
    "async-timeout>=4.0.3",
    "mashumaro>=3.5",
    "protobuf3-to-dict>=0.1.5",
    "protobuf>=3.19.4"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.optional-dependencies]
interactive = [
    "curl_cffi==v0.8.0b7"
]

[project.urls]
Homepage = "https://github.com/isaackogan/TikTokLive"
Download = "https://github.com/isaackogan/TikTokLive/releases/tag/v6.4.5.post2"

[tool.setuptools]
license-files = ['LICENSE']

[tool.setuptools.packages.find]
where = ["."]
include = ["TikTokLive*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md"]  # Proper wildcard for including package data
