[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TikTokLive"
version = "7.0.0b1"
description = "TikTok Live Python Client"
readme = "README.md"  # Corrected format
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Isaac Kogan", email = "info@isaackogan.com" }
]
keywords = ["tiktok", "tiktok live", "python3", "api", "unofficial"]
dependencies = [
    "httpx>=0.28.1",
    "pyee==13.0.1",
    "ffmpy>=0.3.0",
    "websockets_proxy==0.1.3",
    "betterproto2==0.9.1",
    "async-timeout>=4.0.3",
    "mashumaro>=3.5",
    "protobuf3-to-dict>=0.1.5",
    "protobuf>=3.19.4",
    "TikTokLiveProto==0.2.0",
    "EulerApiSdk>=0.1.0"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[dependency-groups]
# Maintainer-only tooling. Not shipped with the wheel — these are local-dev
# dependencies for running the codegen scripts under scripts/proto/. Build
# and publish dependencies live in .github/workflows/publish.yml, not here.
dev = [
    "jinja2",
    "pyyaml",
    "types-PyYAML",   # mypy stubs for pyyaml (the package itself is untyped)
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.mypy]
# Pinned to the project's runtime floor (see ``requires-python``). Bump in
# lockstep with that value.
python_version = "3.10"

# Existing codebase: don't fail on every untyped helper. We still get coverage
# on annotated functions (which includes the proto/client surface where
# field-rename mistakes land), and ``check_untyped_defs`` lets us flag those
# inside untyped helpers too.
check_untyped_defs = true
disallow_untyped_defs = false

# Third-party deps without type stubs would otherwise drown the report. The
# per-module ``follow_imports`` overrides below keep this from masking real
# issues inside our own code.
ignore_missing_imports = true

warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true

# Generated outputs are held to the same bar as hand-written code, except
# ``_aliases.py`` which intentionally attaches @property hooks to existing
# classes via ``setattr``-style mutation that mypy can't model.
exclude = [
    "TikTokLive/proto/_aliases\\.py",
    "build/",
    "dist/",
]

[project.urls]
Homepage = "https://github.com/isaackogan/TikTokLive"

[tool.setuptools]
license-files = ['LICENSE']

[tool.setuptools.packages.find]
where = ["."]
include = ["TikTokLive*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.md"]  # Proper wildcard for including package data
